feature/unit-tests-and-activity: Create tests and Activity in RKO process